--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,58 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+ul,
+ol {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
 a {
   text-decoration: none;
 }
+address {
+  font-style: normal;
+}
+button {
+  display: block;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.padding-top-0 {
+  padding-top: 0;
+}
 header {
-  border: 1px solid #ececec;
+  padding: 25px 0;
+  border-bottom: 1px solid #ececec;
+}
+.header-help {
+  display: flex;
+  align-items: center;
 }
 .logo-ws {
   font-family: "Raleway";
@@ -24,46 +71,58 @@ header {
 .logo-color {
   color: var(--link_and_button_color);
 }
-
+.header-nav {
+  display: flex;
+  align-items: center;
+}
 .header-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--letters_and_logo_color_black);
-  display: inline-block;
 }
 .header-link:hover {
   color: var(--link_and_button_color);
 }
-.header-kontakt > a {
+.header-kontakt {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  margin-left: auto;
+}
+.header-kontact-link {
   color: #757575;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
 }
 .header-kontakt > a:hover {
   color: var(--link_and_button_color);
 }
-.header-list > li {
-  display: inline-block;
+.header-list {
+  display: flex;
+  gap: 50px;
+  margin-left: 93px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-left: 93px;
 }
 .title-section {
-  background: #2f303a;
   text-align: center;
+  background: #2f303a;
+  padding: 200px 0;
 }
-.title-section > h1 {
+.title-section-h1 {
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   color: var(--letters_and_logo_color_white);
   font-weight: 900;
-  white-space: pre-wrap;
+  width: 696px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
-.title-section > button {
-  width: 200px;
-  height: 50px;
+.title-section-button {
+  min-width: 200px;
   font-family: "Roboto";
   font-weight: 700;
   font-size: 16px;
@@ -73,67 +132,85 @@ header {
   box-shadow: 0px 4px 4px var(--letters_and_logo_color_black);
   border-radius: 4px;
   background-color: var(--link_and_button_color);
-  cursor: pointer;
+  margin: 0 auto;
+  padding: 10px 41px;
+  border: none;
 }
-.Advantages > h2 {
+.advantages {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin: 0;
+  padding: 0;
+}
+.advantages-h2 {
   position: absolute;
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: normal;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-.adv-list {
-  display: inline-block;
 }
 .adv-list > h3 {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  margin-bottom: 10px;
 }
 .adv-list > p {
   width: 270px;
   line-height: 1.71;
   color: #757575;
 }
-.wwd-list {
-  display: inline-block;
+.what-we-do-list {
+  display: flex;
+  gap: 30px;
 }
-.what-we-do > h2 {
+.what-we-do-h2 {
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 .our-team {
-  display: inline-block;
   text-align: center;
   background-color: #f5f4fa;
 }
-.our-team > h2 {
-  padding-top: 94px;
-  padding-bottom: 10px;
+.our-team-ul {
+  display: flex;
+  gap: 30px;
+}
+.our-team-h2 {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 .team-list {
-  display: inline-block;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
-.team-list > h3 {
+.team-list > div {
+  padding: 30px 0;
+}
+.team-list-h3 {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
+  margin-bottom: 10px;
 }
-.team-list > p {
+.team-list-p {
   font-size: 16px;
   color: #757575;
   letter-spacing: 0.03em;
@@ -141,8 +218,9 @@ header {
 footer {
   background: #2f303a;
   line-height: 24px;
+  padding: 60px 0;
 }
-footer > .logo-ws {
+.logo-ws-white {
   color: var(--letters_and_logo_color_white);
 }
 .map-address {
@@ -153,31 +231,54 @@ footer > .logo-ws {
 }
 address {
   font-style: normal;
+  margin-top: 20px;
 }
-address > ul {
-  list-style-type: none;
+.address-margin {
+  margin-bottom: 9px;
 }
 .footer-a-style {
-  display: block;
   font-size: 14px;
   line-height: 1.71;
 }
 address > a:hover {
   color: var(--link_and_button_color);
 }
+
 .current {
+  color: var(--link_and_button_color);
+}
+.footer-a-style:hover {
   color: var(--link_and_button_color);
 }
 
 /* ⬇ <<PORTFOLIO>> ⬇ */
+.title-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 50px;
+}
+.title-button-h1 {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
-.title-button > h1 {
-  visibility: hidden;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .but-list {
   display: inline-flex;
 }
 .but-list > button {
+  width: 93px;
+  height: 38px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -185,6 +286,7 @@ address > a:hover {
   color: var(--letters_and_logo_color_black);
   border: none;
   cursor: pointer;
+  border-radius: 4px;
   letter-spacing: 0.03em;
   font-family: inherit;
 }
@@ -193,26 +295,38 @@ address > a:hover {
   color: var(--letters_and_logo_color_white);
 }
 .portfolio-list {
-  font-weight: 700;
-  font-size: 18px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
+
 .portf-list {
-  display: inline-block;
   width: 370px;
-  height: 404px;
-  text-align: left;
-  background-color: var(--letters_and_logo_color_white);
-  border: 1px solid #eeeeee;
 }
-.portf-list > h3 {
+
+.portf-list > img {
+  width: 100%;
+}
+.portf-list > div {
+  padding-left: 24px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border: 1px solid #eeeeee;
+  border-top: 0;
+}
+.portf-list-h3 {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
-.portf-list > p {
+.portf-list-p {
   font-size: 16px;
   line-height: 1.88;
   color: #757575;
   letter-spacing: 0.03em;
+}
+.current {
+  color: var(--link_and_button_color);
 }
