--- a/css/styles.css
+++ b/css/styles.css
@@ -52,52 +52,57 @@ button {
   margin: 0 auto;
   padding: 0 15px;
 }
-.padding-top-0 {
+.padding__top__0 {
   padding-top: 0;
 }
 header {
   padding: 25px 0;
   border-bottom: 1px solid #ececec;
 }
-.header-help {
+.header__help {
   display: flex;
   align-items: center;
 }
-.logo-ws {
+.logo__ws {
   font-family: "Raleway";
   font-size: 26px;
   color: var(--letters_and_logo_color_black);
 }
-.logo-color {
+.logo__color {
   color: var(--link_and_button_color);
 }
-.header-nav {
+.header__nav {
   display: flex;
   align-items: center;
 }
-.header-link {
+.header__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--letters_and_logo_color_black);
 }
-.header-link:hover {
+.header__link:hover {
   color: var(--link_and_button_color);
 }
-.header-kontakt {
+.header__kontakt {
   display: flex;
   align-items: center;
   gap: 50px;
   margin-left: auto;
 }
-.header-kontact-link {
+.header__kontakt__icon {
+  fill: currentColor;
+  vertical-align: middle;
+  --color2: currentColor;
+}
+.header__kontact__link {
   color: #757575;
 }
-.header-kontakt > a:hover {
+.header__kontakt > a:hover {
   color: var(--link_and_button_color);
 }
-.header-list {
+.header__list {
   display: flex;
   gap: 50px;
   margin-left: 93px;
@@ -106,12 +111,23 @@ header {
   padding: 0;
   margin-left: 93px;
 }
-.title-section {
+.background__header {
   text-align: center;
-  background: #2f303a;
+  align-items: center;
   padding: 200px 0;
+  background-color: #2f303a;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/background-header.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
+  margin: 0 auto;
 }
-.title-section-h1 {
+.title__section__h1 {
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
@@ -121,7 +137,7 @@ header {
   margin: 0 auto;
   margin-bottom: 30px;
 }
-.title-section-button {
+.title__section__button {
   min-width: 200px;
   font-family: "Roboto";
   font-weight: 700;
@@ -143,7 +159,16 @@ header {
   margin: 0;
   padding: 0;
 }
-.advantages-h2 {
+.advantages__icons {
+  background-color: #f5f4fa;
+  height: 120px;
+  display: flex;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+}
+.advantages__h2 {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -155,23 +180,23 @@ header {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.adv-list > h3 {
+.adv__list > h3 {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
 }
-.adv-list > p {
+.adv__list > p {
   width: 270px;
   line-height: 1.71;
   color: #757575;
 }
-.what-we-do-list {
+.what__we__do__list {
   display: flex;
   gap: 30px;
 }
-.what-we-do-h2 {
+.what__we__do__h2 {
   text-align: center;
   font-weight: 700;
   font-size: 36px;
@@ -179,80 +204,148 @@ header {
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
-.our-team {
+.our__team {
   text-align: center;
   background-color: #f5f4fa;
 }
-.our-team-ul {
+.our__team__ul {
   display: flex;
   gap: 30px;
 }
-.our-team-h2 {
+.our__team__h2 {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
+  text-align: center;
 }
-.team-list {
+.team__list {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team-list > div {
+.team__list > div {
   padding: 30px 0;
 }
-.team-list-h3 {
+.social__icon {
+  border-radius: 50%;
+  display: flex;
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  color: #afb1b8;
+}
+.social__icon:hover,
+.social__icon:focus {
+  background-color: var(--link_and_button_color);
+  --color3: var(--letters_and_logo_color_white);
+  outline: none;
+}
+.current__color__svg {
+  fill: currentColor;
+}
+.social__icon__box {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 16px;
+}
+.team__list__h3 {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
 }
-.team-list-p {
+.team__list__p {
   font-size: 16px;
   color: #757575;
   letter-spacing: 0.03em;
+}
+.current__color__svg > use {
+  fill: currentColor;
+}
+.all__clients {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.all__clients__a {
+  border: 1px solid currentColor;
+  border-radius: 4px;
+  width: 170px;
+  height: 92px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #afb1b8;
+}
+.all__clients__a:hover,
+.all__clients__a:focus {
+  --color3: var(--link_and_button_color);
+  border-color: var(--link_and_button_color);
+  outline: none;
 }
 footer {
   background: #2f303a;
   line-height: 24px;
   padding: 60px 0;
 }
-.logo-ws-white {
+.logo__ws__white {
   color: var(--letters_and_logo_color_white);
 }
-.map-address {
+.map__address {
   color: var(--letters_and_logo_color_white);
+  font-size: 14px;
+  line-height: 1.71;
 }
-.contact-info {
+.contact__info {
   color: #999999;
+  font-size: 14px;
+  line-height: 1.71;
 }
 address {
   font-style: normal;
   margin-top: 20px;
 }
-.address-margin {
+.address__margin {
   margin-bottom: 9px;
 }
-.footer-a-style {
-  font-size: 14px;
-  line-height: 1.71;
-}
-address > a:hover {
+.contact__info:hover {
   color: var(--link_and_button_color);
+}
+.map__address:hover {
+  color: var(--link_and_button_color);
+}
+.footer__box {
+  display: flex;
+  gap: 70px;
+  align-items: baseline;
+}
+.push__it__h3 {
+  color: var(--letters_and_logo_color_white);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+}
+.footer__icon {
+  background-color: #ffffff1a;
 }
 
 .current {
   color: var(--link_and_button_color);
 }
-.footer-a-style:hover {
+.footer__a__style:hover {
   color: var(--link_and_button_color);
 }
 
 /* ⬇ <<PORTFOLIO>> ⬇ */
-.title-button {
+.title__button {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -260,7 +353,7 @@ address > a:hover {
   gap: 8px;
   margin-bottom: 50px;
 }
-.title-button-h1 {
+.title__button__h1 {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -273,10 +366,10 @@ address > a:hover {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.but-list {
+.but__list {
   display: inline-flex;
 }
-.but-list > button {
+.but__list > button {
   width: 93px;
   height: 38px;
   font-weight: 500;
@@ -289,39 +382,56 @@ address > a:hover {
   border-radius: 4px;
   letter-spacing: 0.03em;
   font-family: inherit;
+  padding: 6px 25px;
 }
-.but-list > button:hover {
+.but__list > button:hover {
   background-color: var(--link_and_button_color);
   color: var(--letters_and_logo_color_white);
 }
-.portfolio-list {
+.portfolio__list {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.portf-list {
+.portf__list {
   width: 370px;
 }
 
-.portf-list > img {
+.portf__list > img {
   width: 100%;
+  height: 294px;
 }
-.portf-list > div {
-  padding-left: 24px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+.portf__list__div {
+  padding: 20px 0 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
 }
-.portf-list-h3 {
+.portf__list__over__hidden {
+  position: relative;
+  overflow: hidden;
+}
+.portf__list__over {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--link_and_button_color);
+  outline: transparent;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portf__list__h3 {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
-.portf-list-p {
+.portf__list__p {
   font-size: 16px;
   line-height: 1.88;
   color: #757575;
@@ -329,4 +439,18 @@ address > a:hover {
 }
 .current {
   color: var(--link_and_button_color);
+}
+.shadow {
+  display: block;
+  color: inherit;
+}
+.shadow:hover,
+.shadow:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  outline: transparent;
+}
+.portf__list:hover .port__list__over__hidden,
+.portf__list:focus .port__list__over__hidden {
+  transform: translateY(0%);
 }
